--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 #ここにmongoDBへのコネクション情報を入れます
-MONGODB_URI = "mongodb+srv://takuto:takuto0712@test.a9jviqe.mongodb.net/?retryWrites=true&w=majority"
+MONGODB_URI = "mongodb+srv://takuto:<passward>@test.a9jviqe.mongodb.net/?retryWrites=true&w=majority"
